
--Removed accuracy power-up to improve feel of basic shooting, and also because
  its effect was hard to notice, making it confusing.

--Made rapid fire more rapid at lower levels so it's easier to notice.

--Made heat seek more noticeable at low levels, and much stronger at high 
  levels.

--Made bullet speed faster at lower levels so it's easier to notice.




Version 3   2011-January-6

--Fixed crash when rising out right onto a rise marker that will cause and
  immediate, subsequent rise (thanks Stephen Lavelle).

--Removed empty power-up tokens completely from all floors to reduce
  confusion about their function and increase tactical richness when trying
  to de-power an enemy.

--Fixed to ignore hidden files in playbackGame directory (a problem on Mac OS
  where .DS_STORE files are created automatically by the OS).

--Fixed memory leak upon quit during rise-out.

--Improved intro levels to introduce a few power-ups, and combinations
  of power-ups, one step at a time.

--Changed so that default player power set is always empty (with two hearts), 
  increasing the tactical challenge and also increasing the implicit penalty 
  for getting knocked down to a lower level.

--Shortened bullet fade-out at end of range to make bullet range easier
  to discern.

--Player base health is now 1, but combined with two default heart tokens,
  effective health is still 3 if the player picks up no tokens.

--Easier to read, segmented player health bar.

--Power ups now can change type based on the majority type of their sub-powers.

--Steepened power-up curves to make game more difficult faster (level 30 is
  now roughly as difficult as the old level 90).

--Fixed so that mouse speed is independent of screen resolution.

--Added a settings file for adjusting mouse speed.

--Added a half-second of immortality after rise-out.

--Fixed crash on exit during descent.

--Changed rise icon on info panel to be color-matching.
